desktop header styled

--- a/wp-content/themes/Roots/assets/less/layouts/_header.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_header.less
@@ -3,17 +3,15 @@
 	position: relative;
 	width: 100%;
 	height: 80px;
-	overflow: hidden;
-	@media all and (max-width: @tablet) {
-		overflow: visible;
-	}
+	margin-bottom: 40px;
 	
 	nav {
-		width: 40%;
+		width: 80%;
 		position: absolute;
 		right: 40px;
-		bottom: 10px;
-		z-index: 120;
+		bottom: 0px;
+		border-radius: 3px;
+		background-color: orange;
 		@media all and (max-width: @tablet) {
 			right: 0px;
 		}
@@ -21,57 +19,53 @@
 
 	nav a, nav button {
 		text-decoration: none;
-		color: @black;
+		color: @white;
 		font-size: 16px;
 		line-height: 22px;
-		.hover-blue-txt();
-	}
-	ul li {
-		display: inline-block;
-		width: 18%;
-		text-align: right;
-		margin-left: 1%;
-		@media all and (max-width: @tablet) {
-			&:first-child {
-				width: 50%;
-			}
-			&:nth-child(2) {
-				width: 35%;
-				text-align: center;
-			}
-		}
-		&.active {
-			font-weight: bold;
-		}
 	}
 
-	button.connect {
-		right: 0;
-		position: absolute;
-		bottom: 8px;
-		font-size: 16px;
-		line-height: 22px;
-		background-color: transparent;
-		.hover-blue-txt();
+	ul {
+		width: 65%;
+		left: 37%;
+		top: 2px;
+		position: relative;
+		li {
+			display: inline-block;
+			width: 15%;
+			text-align: right;
+			margin-left: .5%;
+			@media all and (max-width: @tablet) {
+				&:first-child {
+					width: 50%;
+				}
+				&:nth-child(2) {
+					width: 35%;
+					text-align: center;
+				}
+			}
+			&.active {
+				font-weight: bold;
+			}
+		}
 	}
+}
 
-	.transparency {
-		position: absolute;
-		right: 0;
-		z-index: 1;
-	}
+#YRT_logo {
+	position: absolute;
+	right: 40px;
+	top: 2px;
 }
 .navbar-brand {
 	position: absolute;
 	left: 40px;
-	bottom: 10px;
-	z-index: 1000;
+	bottom: 5px;
+	width: 15%;
 	@media all and (max-width: @tablet) {
 		left: 0px;
 	}
 
 	img {
-		width: 180px;
+		width: 140px;
 		position: absolute;
 		bottom: 0;
 	}
