final tweaks on resources/links

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -274,6 +274,18 @@ p.message, #login_error {
 .contact-card:nth-child(even) {
 	background-color: #6ccbeb;
 }
+
+//********************** END OF CONTACT
+
+// DOCUMENTS
+
+
+//********************** END OF DOCUMENTS
+
+// LINKS
+
+//*********************** END OF LINKS
+
 // MODALS 
 
 .resource-modal {
@@ -283,6 +295,8 @@ p.message, #login_error {
 	padding: 20px 30px;
 	border-radius: 5px;
 	color: @text-light-gray;
+	background-color: @white;
+	position: absolute;
 	margin-top: 15px;
 	display: none;
 
