--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -147,6 +147,7 @@ p.message, #login_error {
 
 .left-side-top {
 	width: 60%;
+	display: inline-block;
 
 	h2 {
 		font-weight: 700;
@@ -283,6 +284,69 @@ p.message, #login_error {
 //********************** END OF DOCUMENTS
 
 // LINKS
+.left-side-bottom.links {
+	width: 70%;
+	display: inline-block;
+}
+
+.link-card {
+	background-color: #42bce5;
+	color: @white;
+	width: 31.5%;
+	margin-right: 1%;
+	margin-top: 1%;
+	padding: 15px;
+	display: inline-block;
+
+	a {
+		color: @white;
+	}
+
+	h4 {
+		font-weight: 600;
+		margin-bottom: 30px;
+	}
+
+	span {
+		display: block;
+		font-weight: 300;
+	}
+}
+.right-side {
+	width: 27%;
+	display: inline-block;
+	top: 160px;
+	position: absolute;
+	right: 0;
+
+	h2 {
+		font-weight: 700;
+		color: @orange;
+	}
+
+	p {
+		color: @text-light-gray;
+	}
+
+	div.orange {
+		background-color: @orange;
+		height: 50px;
+		width: 50px;
+		margin-right: 3px;
+	}
+	div {
+		display: inline-block;
+		vertical-align: top;
+	}
+
+	ul li {
+		margin-bottom: 20px;
+		h4 {
+			margin-top: 0;
+			margin-bottom: 5px;
+		}
+	}
+}
 
 //*********************** END OF LINKS
 
@@ -310,7 +374,7 @@ p.message, #login_error {
 		height: 260px;
 	}
 
-	input, textarea {
+	input, textarea, select {
 		background-color: @light-gray;
 		padding: 5px 8px;
 		margin-left: 10px;
@@ -347,7 +411,22 @@ p.message, #login_error {
 		display: block;
 		margin: 5px 0 5px auto;
 	}
+
+	// links
+	.textarea {
+		height: 80px;
+	}
+
+	&.links form {
+		height: 310px;
+	}
+
+	select {
+		width: 193px;
+		height: 30px;
+	}
 }
+
 
 // Contacts
 
