link submission working and displaying right

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -380,6 +380,7 @@ p.message, #login_error {
 	margin-top: 1%;
 	padding: 15px;
 	display: inline-block;
+	vertical-align: top;
 
 	a {
 		color: @white;
