search added in all resources

--- a/wp-content/themes/Roots/assets/less/layouts/_general.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_general.less
@@ -56,12 +56,18 @@
 	color: @main-blue;
 	.hover-gray-txt();
 }
-
+.blue-link-b {
+	color: @main-blue;
+	.hover-dark-txt();
+}
 .black-link {
 	color: @black;
 	.hover-gray-txt();
 }
-
+.black-link-b {
+	color: @black;
+	.hover-dark-txt();
+}
 // SPACE & LOOK
 // * * * * * * * * * * * * * * * * * * * * * * * * * //
 .vertical-al-top {
