--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -164,9 +164,6 @@ p.message, #login_error {
 	li {
 		display: inline-block;
 		font-weight: 400;
-		a {
-			color: @main-blue;
-		}
 	}
 
 	li.active {
@@ -308,6 +305,9 @@ p.message, #login_error {
 		position: absolute;
 		left: 15px;
 		bottom: 15px;
+	}
+	&.all {
+		width: 31.5%;
 	}
 	img {
 		bottom: 5px;
