added modal for type of file in main page

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -184,7 +184,6 @@ p.message, #login_error {
 		position: relative;
 		margin-right: 5px;
 	}
-
 	.text-input {
 		border: none;
 		background-color: @light-gray;
@@ -221,6 +220,28 @@ p.message, #login_error {
 	}
 }
 
+.select-modal {
+	width: 220px;
+	position: absolute;
+	left: 30%;
+	background-color: white;
+	padding: 5px 10px;
+	box-shadow: 0 0 5px lightgray;
+	z-index: 100;
+
+	h3 {
+		margin-top: 0;
+		font-size: 16px;
+		line-height: 20px;
+		font-weight: 700;
+	}
+
+	li a {
+		font-size: 14px;
+		line-height: 18px;
+		padding: 3px 0;
+	}
+}
 .left-side-bottom h3 {
 	font-weight: 600;
 	font-size: 16px;
