twitter integration working

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -712,8 +712,7 @@ p.message, #login_error {
 
 	.wpcf7-response-output {
 		padding: 5px;
-		color: @main-blue;
-		text-shadow: 0 0 2px @white;
+		color: @white;
 		margin: 5px auto;
 	}
 }
