event display styled

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -947,3 +947,56 @@ td .event-list {
 		background-color: blue;
 	}
 }
+
+// RIGHT SIDE - SELECTED EVENT
+.selected {
+	background-color: @main-blue;
+	color: @white;
+	width: 80%;
+	padding: 15px;
+	border-radius: 4px;
+
+	h2 {
+		color: @white;
+		margin-bottom: 20px;
+		font-weight: 500;
+	}
+
+	h5 {
+		text-align: center;
+		margin: 20px 0 10px 0;
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 20px;
+	}
+
+	img.event {
+		max-width: 100%;
+		margin-bottom: 20px; 
+	}
+	img.small {
+		max-width: 20px;
+	}
+	span {
+		display: inline-block;
+		width: 80%;
+		vertical-align: top;
+	}
+	p {
+		font-weight: 300;
+		color: @white;
+		text-align: center;
+		margin: 2px 0 5px 0;
+		font-size: 14px;
+		line-height: 20px;
+	}
+	section {
+		text-align: left;
+		width: 85%;
+		margin: 30px auto 20px auto;
+
+		p {
+			text-align: left;
+		}
+	}
+}
