php calendar added, html deleted

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -839,77 +839,100 @@ table {
 	width: 100%;
 }
 
-tbody {
-	border: 1px solid @light-gray;
-	border-radius: 2px;
-}
-
-th {
-	display: block;
-	text-align: right;
-	h5 {
-		margin: 5px auto;
-	}
-}
-tr {
-	width: 13.85%;
-	margin-right: 0.5%;
-	display: inline-block;
-	vertical-align: top;
-
-}
-
-td {
-	display: block;
-
-	&.day {
-		height: 250px;
-		position: relative;
-		border-top: 1px solid @middle-gray;
-		overflow: scroll;
-	}
-
-	&.current {
-		border-top: 2px solid @orange;
-	}
-
-	.date {
-		position: absolute;
-		right: 5px;
-		top: 5px;
-		font-size: 12px;
-	}
-}
-
-.inactive {
-	td {
-		background-color: @light-gray;
-	}
-
-	&.sat {
-		margin-right: 0;
-	}
-}
-
-span.image {
-	display: block;
+.calendar-row, .calendar-row-day {
 	width: 100%;
-	height: 40px;
-	background-color: @orange;
-}
 
-td .event-list {
-	margin-top: 25px;
-}
-
-.calendar-pagination {
-	margin: 5px 5px 5px auto;
-	text-align: right;
-
-	i {
-		padding: 5px 8px;
+	td {
+		display: inline-block;
+		width: 14%;
 	}
 }
+
+.calendar-row-day {
+	height: 120px;
+	background-color: @light-gray;
+}
+.calendar-day, .calendar-day-np {
+	height: 100%;
+}
+.calendar-day-np {
+	background-color: @middle-gray;
+}
+
+.day-number {
+	text-align: right;
+}
+// tbody {
+// 	border: 1px solid @light-gray;
+// 	border-radius: 2px;
+// }
+
+// th {
+// 	display: block;
+// 	text-align: right;
+// 	h5 {
+// 		margin: 5px auto;
+// 	}
+// }
+// tr {
+// 	width: 13.85%;
+// 	margin-right: 0.5%;
+// 	display: inline-block;
+// 	vertical-align: top;
+
+// }
+
+// td {
+// 	display: block;
+
+// 	&.day {
+// 		height: 250px;
+// 		position: relative;
+// 		border-top: 1px solid @middle-gray;
+// 		overflow: scroll;
+// 	}
+
+// 	&.current {
+// 		border-top: 2px solid @orange;
+// 	}
+
+// 	.date {
+// 		position: absolute;
+// 		right: 5px;
+// 		top: 5px;
+// 		font-size: 12px;
+// 	}
+// }
+
+// .inactive {
+// 	td {
+// 		background-color: @light-gray;
+// 	}
+
+// 	&.sat {
+// 		margin-right: 0;
+// 	}
+// }
+
+// span.image {
+// 	display: block;
+// 	width: 100%;
+// 	height: 40px;
+// 	background-color: @orange;
+// }
+
+// td .event-list {
+// 	margin-top: 25px;
+// }
+
+// .calendar-pagination {
+// 	margin: 5px 5px 5px auto;
+// 	text-align: right;
+
+// 	i {
+// 		padding: 5px 8px;
+// 	}
+// }
 
 //  UPCOMING
 
