response form retrieving info, not being sent though

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -722,6 +722,7 @@ p.message, #login_error {
 	background-color: @main-blue;
 	padding: 15px 20px;
 	width: 500px;
+	display: none;
 
 	label, h4 {
 		color: @white;
@@ -802,6 +803,8 @@ p.message, #login_error {
 	color: transparent;
 }
 // RESPOND TO REQUEST MODAL
+
+
 
 // Contacts
 
