document filter working

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -155,6 +155,8 @@ p.message, #login_error {
 	min-height: 1000px;
 }
 
+
+
 // RESOURCES
 //* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *//
 
@@ -427,7 +429,9 @@ p.message, #login_error {
 		}
 	}
 }
-
+#tag-filter-form {
+	visibility: hidden;
+}
 //********************** END OF DOCUMENTS
 
 
