fixed some style on resources page

--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -660,13 +660,20 @@ p.message, #login_error {
 		margin: 5px 0 5px auto;
 		position: absolute;
 		right: 20px;
-		bottom: 10px;
+		bottom: 7px;
 		width: 80px;
 	}
 
-	i {
+	i.fa-upload {
 		position: absolute;
-		right: 100px;
+		bottom: 20px;
+		right: 90px;
+	}
+
+	i.fa-plus {
+		position: absolute;
+		bottom: 20px;
+		right: 90px;
 	}
 	
 	// WPCF7
