--- a/wp-content/themes/Roots/assets/less/layouts/_general.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_general.less
@@ -51,7 +51,7 @@
 
 .white-link-black {
 	text-decoration: underline;
-	color: @light-gray;
+	color: @text-light-gray;
 	.hover-gray-txt();
 }
 //pagination link
