--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -48,7 +48,7 @@ span.diamond {
 
 		i {
 			font-size: 16px;
-			right: 24px;
+			right: 35px;
 			top: 8px;
 			color: @icon-gray;
 		}
@@ -681,6 +681,9 @@ p.message, #login_error {
 	// WPCF7
 	div.wpcf7-response-output {
 		text-align: center;
+		width: 100%;
+		position: absolute;
+		bottom: 15px;
 	}
 
 	.wpcf7-response-output.wpcf7-display-none.wpcf7-mail-sent-ok {
@@ -1013,6 +1016,10 @@ table {
 .upcoming {
 	margin: 20px 0; 
 	width: 90%;
+	
+	h2 {
+		margin-bottom: 40px;
+	}
 
 	li {
 		display: inline-block;
