--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -951,6 +951,7 @@ p.message, #login_error {
 }
 tbody {
 	border: 1px solid @light-gray;
+	width: 100%;
 
 	tr:last-child {
 		visibility: hidden;
@@ -1246,5 +1247,13 @@ table {
 	background-color: @main-blue;
 	color: @white;
 	display: inline-block;
+
+	li {
+		margin-bottom: 5px!important;
+
+		a {
+			color: @white;
+		}
+	}
 }
 
