--- a/wp-content/themes/Roots/assets/less/layouts/_pages.less
+++ b/wp-content/themes/Roots/assets/less/layouts/_pages.less
@@ -158,7 +158,7 @@ p.message, #login_error {
 
 .main {
 	@media all and (max-width: @tablet) {
-		padding: 20px 40px;
+		// padding: 20px 40px;
 	}
 
 	@media all and (max-width: @mobile) {
@@ -412,6 +412,7 @@ p.message, #login_error {
 
 	@media all and (max-width: @mobile) {
 		width: 100%;
+		margin-top: 3%;
 	}
 
 	a {
@@ -485,6 +486,7 @@ p.message, #login_error {
 	@media all and (max-width: @mobile) {
 		width: 100%;
 		margin-right: 0;
+		margin-top: 3%;
 	}
 
 	.type {
@@ -608,6 +610,7 @@ p.message, #login_error {
 
 	@media all and (max-width: @mobile) {
 		width: 100%;
+		margin-top: 3%;
 	}
 
 	a {
@@ -1041,6 +1044,9 @@ p.message, #login_error {
 
 .left-side.events {
 	width: 75%;
+	@media all and (max-width: @tablet) {
+		width: 100%;
+	}
 
 	h2 {
 		font-weight: 500;
@@ -1057,6 +1063,11 @@ p.message, #login_error {
 	color: @orange;
 	padding: 5px;
 	font-size: 16px;
+	&.second {
+		@media all and (max-width: @tablet) {
+			display: none;
+		}
+	}
 }
 
 .calendar-pagination {
@@ -1134,6 +1145,9 @@ table {
 .upcoming {
 	margin: 20px 0; 
 	width: 90%;
+	@media all and (max-width: @tablet) {
+		width: 100%;
+	}
 	
 	h2 {
 		margin-bottom: 40px;
@@ -1146,10 +1160,14 @@ table {
 		h4 {
 			margin-top: 0;
 		}
+		
 	}
 
 	li:first-child {
 		width: 8%;
+		@media all and (max-width: @mobile) {
+			width: 20%;
+		}
 
 	}
 
@@ -1157,11 +1175,22 @@ table {
 		width: 28%;
 		h4 {
 			padding: 0 10px;
+			@media all and (max-width: @mobile) {
+				padding: 0;
+			}
+		}
+		@media all and (max-width: @mobile) {
+			width: 80%;
 		}
 	}
 
 	li:nth-child(3), li:nth-child(4) {
 		width: 25%;
+		@media all and (max-width: @mobile) {
+			display: block;
+			width: 100%;
+			margin-left: 20%;
+		}
 	}
 
 	p {
@@ -1183,6 +1212,12 @@ table {
 	width: 80%;
 	padding: 15px;
 	border-radius: 4px;
+	@media all and (max-width: @tablet) {
+		max-width: 400px;
+	}
+	@media all and (max-width: @mobile) {
+		width: 100%;
+	}
 
 	h2 {
 		color: @white;
@@ -1206,6 +1241,10 @@ table {
 	img.event {
 		max-width: 100%;
 		margin-bottom: 20px; 
+		@media all and (max-width: @mobile) {
+			margin: 0 auto 20px auto;
+			display: block;
+		}
 	}
 	img.small {
 		max-width: 20px;
